--- a/public/duhistory.html
+++ b/public/duhistory.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Manage Fee Entries</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style>
   * {
     margin: 0;
@@ -294,88 +295,108 @@
     </div>
   </div>
   <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
-  <script>
-    const userId = localStorage.getItem("userId");
-    document.getElementById("userId").textContent = userId;
+<script>
+  const userId = localStorage.getItem("userId");
+  document.getElementById("userId").textContent = userId;
 
-    function loadPayments() {
-      const tbody = document.querySelector("#feeTable tbody");
-      tbody.innerHTML = `<tr><td colspan="5">Loading...</td></tr>`;
+  function loadPayments() {
+    const tbody = document.querySelector("#feeTable tbody");
+    tbody.innerHTML = `<tr><td colspan="5">Loading...</td></tr>`;
 
-      fetch(`https://crr-noc.onrender.com/my-fee-entries/${userId}`)
-        .then(res => res.json())
-        .then(data => {
-          tbody.innerHTML = "";
-          if (data.length === 0) {
-            tbody.innerHTML = `<tr><td colspan="5">No fee entries found.</td></tr>`;
-          } else {
-           data.forEach(entry => {
-  const tr = document.createElement("tr");
-  const isVerified = entry.matched === 1;
+    fetch(`https://crr-noc.onrender.com/my-fee-entries/${userId}`)
+      .then(res => res.json())
+      .then(data => {
+        tbody.innerHTML = "";
+        if (data.length === 0) {
+          tbody.innerHTML = `<tr><td colspan="5">No fee entries found.</td></tr>`;
+        } else {
+          data.forEach(entry => {
+            const tr = document.createElement("tr");
+            const isVerified = entry.matched === 1;
 
-  tr.innerHTML = `
-    <td>${entry.fee_type}</td>
-    <td>₹${parseFloat(entry.amount_paid).toFixed(2)}</td>
-    <td>${entry.sbi_ref_no}</td>
-    <td>${new Date(entry.created_at).toLocaleString()}</td>
-    <td>
-      ${isVerified 
-        ? '<span style="color: green; font-weight: bold;">✔ Verified by Admin</span>' 
-        : `<button class="delete-btn" onclick="deleteEntry('${entry.id}')">Delete</button>`}
-    </td>
-  `;
-  tbody.appendChild(tr);
-});
+            tr.innerHTML = `
+              <td>${entry.fee_type}</td>
+              <td>₹${parseFloat(entry.amount_paid).toFixed(2)}</td>
+              <td>${entry.sbi_ref_no}</td>
+              <td>${new Date(entry.created_at).toLocaleString()}</td>
+              <td>
+                ${isVerified 
+                  ? '<span style="color: green; font-weight: bold;">✔ Verified by Admin</span>' 
+                  : `<button class="delete-btn" onclick="deleteEntry('${entry.id}')">Delete</button>`}
+              </td>
+            `;
+            tbody.appendChild(tr);
+          });
+        }
+      })
+      .catch(err => {
+        console.error("Error loading fee entries:", err);
+        tbody.innerHTML = `<tr><td colspan="5">Failed to load data.</td></tr>`;
+      });
+  }
 
-          }
-        })
-        .catch(err => {
-          console.error("Error loading fee entries:", err);
-          tbody.innerHTML = `<tr><td colspan="5">Failed to load data.</td></tr>`;
-        });
-    }
-    function goBack() {
-      window.location.href = "settings.html";
-    }
-    function deleteEntry(id) {
-      if (confirm("Are you sure you want to delete this fee entry?")) {
+  function goBack() {
+    window.location.href = "settings.html";
+  }
+
+  function deleteEntry(id) {
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "Do you want to delete this fee entry?",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#d33',
+      cancelButtonColor: '#3085d6',
+      confirmButtonText: 'Yes, delete it!'
+    }).then((result) => {
+      if (result.isConfirmed) {
         fetch(`https://crr-noc.onrender.com/delete-fee-entry/${id}`, {
           method: "DELETE"
         })
         .then(res => res.json())
         .then(resp => {
-          alert(resp.message || "Deleted");
+          Swal.fire({
+            icon: 'success',
+            title: 'Deleted!',
+            text: resp.message || "Fee entry deleted successfully."
+          });
           loadPayments();
         })
         .catch(err => {
           console.error("Error deleting entry:", err);
-          alert("Delete failed.");
+          Swal.fire({
+            icon: 'error',
+            title: 'Failed!',
+            text: "Delete failed. Please try again later."
+          });
         });
       }
-    }
-
-     function toggleMobileMenu() {
-      const sidebar = document.querySelector('.sidebar');
-      sidebar.classList.toggle('open');
-    }
-
-    document.querySelectorAll(".menu li a").forEach(link => {
-      link.addEventListener("click", () => {
-        if (window.innerWidth <= 768) {
-          document.querySelector('.sidebar').classList.remove('open');
-        }
-      });
     });
+  }
 
+  function toggleMobileMenu() {
+    const sidebar = document.querySelector('.sidebar');
+    sidebar.classList.toggle('open');
+  }
 
-function logout() {
+  document.querySelectorAll(".menu li a").forEach(link => {
+    link.addEventListener("click", () => {
+      if (window.innerWidth <= 768) {
+        document.querySelector('.sidebar').classList.remove('open');
+      }
+    });
+  });
+
+  function logout() {
     localStorage.removeItem("userId");
     if ("caches" in window) {
       caches.keys().then((names) => names.forEach((name) => caches.delete(name)));
     }
     window.location.replace("index.html");
   }
-    loadPayments();
-  </script>
+
+  loadPayments();
+</script>
+
 </body>
 </html>
