--- a/public/adminpanel.html
+++ b/public/adminpanel.html
@@ -218,51 +218,51 @@
   background-color: #fff;
 }
 .mobile-toggle {
-    display: none;
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #1f75cb;
+  color: white;
+  font-size: 24px;
+  padding: 12px 18px;
+  border-radius: 50px;
+  z-index: 9999;
+  cursor: pointer;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+  .mobile-toggle {
+    display: block;
+  }
+
+  .sidebar {
     position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #1f75cb;
-    color: white;
-    font-size: 24px;
-    padding: 12px 18px;
-    border-radius: 50px;
-    z-index: 9999;
-    cursor: pointer;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    top: -100%;
+    left: 0;
+    width: 100%;
+    max-height: 90vh;
+    background-color: rgb(247, 201, 155);
+    transition: top 0.3s ease-in-out;
+    z-index: 999;
   }
 
-  @media (max-width: 768px) {
-    .mobile-toggle {
-      display: block;
-    }
-
-    .sidebar {
-      position: fixed;
-      top: -100%;
-      left: 0;
-      width: 100%;
-      max-height: 320px;
-      overflow-y: auto;
-      z-index: 999;
-      transition: top 0.3s ease-in-out;
-    }
-
-    .sidebar.open {
-      top: 0;
-    }
-
-    body {
-      flex-direction: column;
-      overflow-x: hidden;
-    }
-
-    .main {
-      margin-left: 0 !important;
-      width: 100% !important;
-    }
+  .sidebar.open {
+    top: 0;
   }
+
+  .main {
+    margin-left: 0 !important;
+    width: 100% !important;
+  }
+
+  body {
+    flex-direction: column;
+    overflow-x: hidden;
+  }
+}
   </style>
 </head>
 <body>
@@ -534,11 +534,12 @@ function applyNOCFilter() {
     });
   });
 }
- function toggleSidebar() {
+function toggleSidebar() {
     document.querySelector('.sidebar').classList.toggle('open');
   }
 
-  document.querySelectorAll(".sidebar ul li").forEach(link => {
+  // Close sidebar when any menu item is clicked (mobile only)
+  document.querySelectorAll(".sidebar li").forEach(link => {
     link.addEventListener("click", () => {
       if (window.innerWidth <= 768) {
         document.querySelector('.sidebar').classList.remove('open');
@@ -553,5 +554,6 @@ function applyNOCFilter() {
     window.location.replace("index.html");
   }
   </script>
+  <div class="mobile-toggle" onclick="toggleSidebar()">☰</div>
 </body>
 </html>
