--- a/public/studentresults.html
+++ b/public/studentresults.html
@@ -1,19 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Student Results</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
+    * {
       margin: 0;
-      padding: 20px;
-      background-color: #f5f7fa;
-      color: #333;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    h2 {
+    body {
+      background-color: #2e2e2e;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .container {
+      display: flex;
+      min-height: 100vh;
+    }
+
+    .sidebar {
+      width: 270px;
+      background-color: rgb(247, 201, 155);
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      overflow-y: auto;
+      transition: top 0.3s ease-in-out;
+      z-index: 999;
+    }
+
+    .sidebar h2 {
+      margin: 40px 20px 20px 20px;
+      color: black;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    .menu {
+      list-style: none;
+      padding: 0;
+    }
+
+    .menu li {
+      list-style: none;
+      margin-bottom: 15px;
+    }
+
+    .menu li a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 16px;
+      color: black;
+      padding: 12px 20px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .menu li a:hover,
+    .menu li.active a {
+      background-color: #d4d4d4;
+      font-weight: bold;
+      transform: translateX(5px);
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+    }
+
+    .menu li a span {
+      font-size: 18px;
+      transition: transform 0.3s ease;
+    }
+
+    .menu li a:hover span {
+      transform: scale(1.2);
+    }
+
+    .logout {
+      background-color: #f09000;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 16px;
+      width: 50%;
+      margin: 20px auto 0;
+      transition: background 0.3s ease;
+    }
+
+    .logout:hover {
+      background-color: #d07900;
+    }
+
+    .main-section {
+      flex-grow: 1;
+      background-color: white;
+      padding: 40px 20px;
+      margin-left: 270px;
+    }
+
+    .main-section h2 {
       text-align: center;
       margin-bottom: 20px;
     }
@@ -58,32 +157,206 @@
       text-align: center;
       margin-top: 20px;
     }
+
+    .stats-circles {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+
+.circle-card {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  background: conic-gradient(#1f75cb 0% 0%, #e0e0e0 0% 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-weight: bold;
+  font-size: 20px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+  transition: transform 0.3s ease;
+  margin: 15px;
+}
+
+.circle-card:hover {
+  transform: scale(1.05);
+}
+
+.circle-card::after {
+  content: '';
+  width: 130px;
+  height: 130px;
+  background: white;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.circle-card span {
+  position: relative;
+  z-index: 1;
+  font-size: 22px;
+  color: #1f75cb;
+}
+
+.circle-label {
+  font-size: 14px;
+  color: #444;
+  margin-top: 5px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+}
+
+
+    .mobile-toggle {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #1f75cb;
+      color: white;
+      font-size: 24px;
+      padding: 12px 18px;
+      border-radius: 50px;
+      z-index: 9999;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+      }
+
+      .sidebar {
+        top: -100%;
+        left: 0;
+        width: 100%;
+        max-height: 90vh;
+      }
+
+      .sidebar.open {
+        top: 0;
+      }
+
+      .main-section {
+        margin-left: 0;
+        padding: 20px;
+      }
+
+      .mobile-toggle {
+        display: block;
+      }
+    }
   </style>
 </head>
 <body>
+  <div class="container">
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <h2>ID: <span id="userId">Loading...</span></h2>
+      <ul class="menu">
+        <li><a href="studentdetails.html"><span>📄</span> Student details</a></li>
+        <li><a href="editprofile.html"><span>✏️</span> Edit profile</a></li>
+        <li><a href="feedetails.html"><span>🎓</span> Fee details</a></li>
+        <li><a href="updaterefno.html"><span>🔄</span> Update fee payment</a></li>
+        <li class="active"><a href="#"><span>📊</span> Student Results</a></li>
+        <li><a href="generatenoc.html"><span>➕</span> Generate NOC</a></li>
+        <li><a href="settings.html"><span>⚙️</span> Settings</a></li>
+        <li><a href="notifications.html"><span>🔔</span> Notifications</a></li>
+        <li><a href="privacypolicy.html"><span>📜</span> Privacy policy</a></li>
+      </ul>
+      <button class="logout" onclick="logout()">Logout</button>
+    </div>
 
-  <h2>📘 View Semester Results</h2>
+    <!-- Main Content -->
+    <div class="main-section">
+      <h2>View Semester Results</h2>
+<div style="text-align:center;">
 
-  <div style="text-align:center;">
-    <label for="semester">Select Semester:</label>
-    <select id="semester" onchange="fetchResults()">
-      <option value="">--Select Semester--</option>
-      <option value="1-1">1-1</option>
-      <option value="1-2">1-2</option>
-      <option value="2-1">2-1</option>
-      <option value="2-2">2-2</option>
-      <option value="3-1">3-1</option>
-      <option value="3-2">3-2</option>
-      <option value="4-1">4-1</option>
-      <option value="4-2">4-2</option>
-    </select>
+     <div id="overallStatsContainer" class="stats-circles"></div>
+        <label for="semester">Select Semester:</label>
+        <select id="semester" onchange="fetchResults()">
+          <option value="">--Select Semester--</option>
+          <option value="1-1">1-1</option>
+          <option value="1-2">1-2</option>
+          <option value="2-1">2-1</option>
+          <option value="2-2">2-2</option>
+          <option value="3-1">3-1</option>
+          <option value="3-2">3-2</option>
+          <option value="4-1">4-1</option>
+          <option value="4-2">4-2</option>
+        </select>
+      </div>
+      <div id="resultContainer"></div>
+    </div>
   </div>
 
-  <div id="resultContainer"></div>
+  <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
 
-<script>
-  async function fetchResults() {
-    const regno = localStorage.getItem("regno");
+  <script>
+    function toggleMobileMenu() {
+      const sidebar = document.querySelector('.sidebar');
+      sidebar.classList.toggle('open');
+    }
+
+    document.querySelectorAll(".menu li a").forEach(link => {
+      link.addEventListener("click", () => {
+        if (window.innerWidth <= 768) {
+          document.querySelector('.sidebar').classList.remove('open');
+        }
+      });
+    });
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const userId = localStorage.getItem("userId") || localStorage.getItem("regno");
+      if (!userId) {
+        alert("Please login first.");
+        window.location.href = "index.html";
+        return;
+      }
+      document.getElementById("userId").textContent = userId;
+    });
+document.addEventListener("DOMContentLoaded", async () => {
+  const userId = localStorage.getItem("userId") || localStorage.getItem("regno");
+  if (!userId) {
+    alert("Please login first.");
+    window.location.href = "index.html";
+    return;
+  }
+  document.getElementById("userId").textContent = userId;
+
+  // 🟢 Fetch overall SGPA/Percentage at top
+  try {
+    const res = await fetch(`https://crr-noc.onrender.com/student/overallResults/${userId}`);
+    const data = await res.json();
+
+    if (data && data.sgpa && data.percentage) {
+      const statsDiv = document.getElementById("overallStatsContainer");
+      statsDiv.innerHTML = `
+        <div class="circle-card" style="background: conic-gradient(#1f75cb ${data.sgpa * 10}%, #e0e0e0 0%);">
+          <span>${data.sgpa}</span>
+          <div class="circle-label">Overall SGPA</div>
+        </div>
+        <div class="circle-card" style="background: conic-gradient(#28a745 ${data.percentage}%, #e0e0e0 0%);">
+          <span>${data.percentage}%</span>
+          <div class="circle-label">Overall Percentage</div>
+        </div>
+      `;
+    }
+  } catch (err) {
+    console.error("Error loading overall stats:", err);
+  }
+});
+
+
+      async function fetchResults() {
+    const regno = localStorage.getItem("regno") || localStorage.getItem("userId");
     const semester = document.getElementById("semester").value;
     const container = document.getElementById("resultContainer");
 
@@ -101,15 +374,7 @@
 
     try {
       container.innerHTML = "<p>Loading results...</p>";
-
-      const response = await fetch(`https://crr-noc.onrender.com/student/results`, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ regno, semester })
-      });
-
+      const response = await fetch(`https://crr-noc.onrender.com/student/results/${regno}?semester=${semester}`);
       const data = await response.json();
 
       if (!data.results || data.results.length === 0) {
@@ -117,7 +382,21 @@
         return;
       }
 
-      let html = `<h3>Results for <strong>${data.regno}</strong> - Semester <strong>${data.semester}</strong></h3>`;
+      let html = `<h3 style="text-align:center;">Results for <strong>${data.regno}</strong> - Semester <strong>${data.semester}</strong></h3>`;
+
+      // 🌀 Circle Cards
+      html += `<div class="stats-circles">
+        <div class="circle-card" style="background: conic-gradient(#1f75cb ${data.sgpa * 10}%, #e0e0e0 0%);">
+          <span>${data.sgpa}</span>
+          <div class="circle-label">SGPA</div>
+        </div>
+        <div class="circle-card" style="background: conic-gradient(#28a745 ${data.percentage}%, #e0e0e0 0%);">
+          <span>${data.percentage}%</span>
+          <div class="circle-label">Percentage</div>
+        </div>
+      </div>`;
+
+      // 📊 Table Results
       html += `<table>
                 <tr>
                   <th>Subject Code</th>
@@ -129,26 +408,29 @@
       data.results.forEach(row => {
         html += `<tr>
                   <td>${row.subcode}</td>
-                  <td>${row.subname || '-'}</td>
+                  <td>${row.subname}</td>
                   <td>${row.grade}</td>
-                  <td>${row.credits || '-'}</td>
+                  <td>${row.credits}</td>
                 </tr>`;
       });
 
       html += `</table>`;
-      html += `<div class="stats">
-                 <strong>SGPA:</strong> ${data.sgpa} &nbsp;&nbsp;
-                 <strong>CGPA:</strong> ${data.cgpa} &nbsp;&nbsp;
-                 <strong>Percentage:</strong> ${data.percentage}%
-               </div>`;
-
       container.innerHTML = html;
+
     } catch (err) {
       console.error("Error fetching results:", err);
       container.innerHTML = "<p class='error'>Error fetching results. Please try again later.</p>";
     }
   }
-</script>
 
+    function logout() {
+      localStorage.removeItem("userId");
+      localStorage.removeItem("regno");
+      if ('caches' in window) {
+        caches.keys().then(names => names.forEach(name => caches.delete(name)));
+      }
+      window.location.replace("index.html");
+    }
+  </script>
 </body>
 </html>
